refactor files and links on them

--- a/shop/templates/main.html
+++ b/shop/templates/main.html
@@ -9,7 +9,7 @@
 
 <body background="White-Background-9B1.jpg">
 
-<link rel="stylesheet" type="text/css" href="stylesheet.css">
+<link rel="stylesheet" type="text/css" href="../static/css/styles.css">
 
 <script>
     var Cart = {
