--- a/shop/templates/index.html
+++ b/shop/templates/index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<script>
-$(document).ready(function(){
-    $("p").click(function(){
-        $(this).hide();
-    });
-});
-</script>
+    <meta charset="UTF-8">
+    <title>Sale</title>
+    {% load staticfiles %}
+
+<link  href="{% static 'css/styles.css' %}" rel="stylesheet" type="text/css">
+
 </head>
 <body>
 
