--- a/shop/templates/main.html
+++ b/shop/templates/main.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
 </head>
 
-<body background="White-Background-9B1.jpg">
+<body>
 
 <link rel="stylesheet" type="text/css" href="../static/css/styles.css">
 
@@ -176,7 +176,7 @@
 
     <h3>Awesome Shopping Cart
         <div id="cart-header" align="right"></div>
-        <img src="cart.png" height="4%" width="4%" onclick="openPopup('Wrapp'); return false;">
+        <img src="../static/css/images/cart.png" height="4%" width="4%" onclick="openPopup('Wrapp'); return false;">
     </h3> <hr>
     <div class="filter">
 
